feat: completes blog and gallery layout for flexbox task block 3

--- a/block-BHaabk/index.html
+++ b/block-BHaabk/index.html
@@ -11,3 +11,89 @@
 
 7. Use flexbox properties and values to create columns.
  -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Block 3: Blog and Gallery</title>
+    <link rel="stylesheet" href="./assets/stylesheet/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="container header-container">
+        <a href="#">
+          <img
+            src="./assets/media/altcampus-logo.svg"
+            alt="Brand Logo"
+            class="brand-logo"
+          />
+        </a>
+        <nav class="nav">
+          <a href="">Home</a>
+          <a href="">Projects</a>
+          <a href="">Contact</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="article">
+        <div class="container article-container">
+          <article>
+            <h2>Lorem ipsum dolor sit amet consectetur</h2>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+              voluptas doloribus facere, nobis nihil quos nisi esse
+              necessitatibus, hic accusamus tempora fugiat ducimus illum
+              explicabo, repellendus assumenda quis voluptatum? Consequatur!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam
+              voluptatum facilis perspiciatis obcaecati dolores nam quam modi
+              necessitatibus facere ut, cupiditate doloremque reiciendis autem?
+              Quo debitis explicabo sint tempore quam.
+            </p>
+          </article>
+          <article>
+            <img src="./assets/media/main-image.jpg" alt="Happy Family" />
+          </article>
+        </div>
+      </section>
+      <section class="gallery">
+        <div class="container gallery-container">
+          <div>
+            <img
+              src="./assets/media/image-01.jpg"
+              alt="Happy Nepalese Children"
+            />
+          </div>
+          <div>
+            <img
+              src="./assets/media/image-02.jpg"
+              alt="Happy Bangladeshi Children"
+            />
+          </div>
+          <div>
+            <img src="./assets/media/image-03.jpg" alt="Happy Mum and Child" />
+          </div>
+          <div>
+            <img src="./assets/media/image-04.jpg" alt="Temple in Pond" />
+          </div>
+          <div>
+            <img src="./assets/media/image-05.jpg" alt="Huge temple" />
+          </div>
+          <div>
+            <img src="./assets/media/image-06.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <small>&copy;All Rights reserved</small>
+      </div>
+    </footer>
+  </body>
+</html>
